--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,8 @@ body {
 .gallery-image {
   width: 360px;
   height: 200px;
-  object-fit: cover; 
+  object-fit: cover;
+}
 
 .gallery-image:hover {
   transform: scale(1.05);
